kubernetes/dynamodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb
  labels:
    app: dynamodb
spec:
  ports:
    - name: dynamodb
      port: 8000
      targetPort: 5100
  clusterIP: None
  selector:
    app: dynamodb
