kubernetes/todo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  labels:
    app: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - port: 3000
  type: NodePort
